--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,142 @@
     font-size: 62.5%;
     --bg-background: #040924;
     --bg-light: #FFFFFF;
+    --bg-color-text: #0C3440
 }
 body{
+    width: 100%;
+    height: 100vh;
     font-family: "Roboto", sans-serif;
     font-size: 1.6rem;
-   
+
+    background-color: var(--bg-background);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+button, input{
+    font-family: "Roboto", sans-serif;
+}
+.card{
+    width: 42.8rem;
+
+    border-radius: 0.6rem;
+
+    padding: 4.8rem 6.4rem 6.4rem;
+
+    background-color: var(--bg-light);
+
+}
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+}
+fieldset{
+    border: 0;
+}
+fieldset legend{
+    font-size: 3.2rem;
+    font-weight: bold;
+    color: var(--bg-color-text);
+
+    margin-bottom: 1.6rem;
+}
+
+.input-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.input-wrapper label{
+    font-size: 1.4rem;
+    font-weight: 500;
+
+    margin-bottom: 0.8rem;
+
+    color: #00453A;
+}
+
+.input-wrapper input{
+    width: 100%;
+
+    padding: 1.6rem;
+
+    border-radius: 0.4rem;
+    border: 0.4rem solid #DCE2E9;
+
+    background-color: #DCE2E9;
+}
+.input-wrapper button{
+
+    display: flex;
+    justify-content: center;
+    gap: 0.8rem;
+    
+    border: none;
+
+    padding: 1.6rem;
+
+    border-radius: 0.4rem;
+
+    font-weight: bold;
+    font-size: 1.8rem;
+    line-height: 2rem;
+
+    color: #FFFFFF;
+    background-color: #02799d;
+
+    transition: 0.5s ease-in-out;
+
+    margin-top: 3.2rem
+}
+.input-wrapper button:hover{
+
+    display: flex;
+    justify-content: center;
+    gap: 0.8rem;
+
+    padding: 1.6rem;
+
+    border: none;
+    border-radius: 0.4rem;
+
+    font-weight: bold;
+    font-size: 1.8rem;
+    line-height: 2rem;
+
+    color: #FFFFFF;
+    background-color: #02d409;
+
+}
+
+
+
+
+
+
+
+.alert{
+    width: 100%;
+    text-align: center;
+
+    padding: 0.8rem;
+
+
+    position: absolute; 
+    top: 0;
+
+    background-color: #f03e3e;
+    color: var(--bg-light);
+
+    font-size: 1.6rem;
+    line-height: 2rem;
+    font-weight: bold;
+}
+
+.active-alert{
+    display: none;
 }
