--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body{
 button, input{
     font-family: "Roboto", sans-serif;
 }
-.card{
+.card, .card-result{
     width: 42.8rem;
 
     border-radius: 0.6rem;
@@ -66,8 +66,11 @@ fieldset legend{
     color: #00453A;
 }
 
-.input-wrapper input{
+.input-wrapper input, .input-wrapper input::placeholder{
     width: 100%;
+
+    font-weight: bold;
+    font-size: 1.6rem;
 
     padding: 1.6rem;
 
@@ -75,6 +78,10 @@ fieldset legend{
     border: 0.4rem solid #DCE2E9;
 
     background-color: #DCE2E9;
+
+    color: #495057;
+
+    
 }
 .input-wrapper button{
 
@@ -118,12 +125,49 @@ fieldset legend{
     background-color: #02d409;
 
 }
+/* card result */
+.container-result{
+    width: 100%;
+    height: 100vh;
+
+    position: absolute;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: rgba(0, 0, 0, 0.7);
+
+}
+.card-result{
+    position: relative;
+
+    width: 36.3rem;
+    padding: 4.8rem 6.4rem 6.4rem;
+}
+.card-result h3{
+    font-size: 3.2rem;
+    font-weight: bold;
+    line-height: 4.0rem;
 
 
+    color: #0C3440;
+}
 
+.button-close{
+    border: 0;
 
+    padding: 1.2rem;
 
+    position: absolute;
 
+    right: 1rem;
+    top: 1rem;
+
+    cursor: pointer;
+    
+    background-color: inherit;
+}
 
 .alert{
     width: 100%;
