--- a/css/styles.css
+++ b/css/styles.css
@@ -190,3 +190,19 @@ fieldset legend{
 .active-alert{
     display: none;
 }
+
+/* screen mobile */
+@media (max-width: 768px) {
+    .card{
+        width: 36.8rem;
+    }
+    .card-result{
+        position: relative;
+    
+        width: 33.3rem;
+        padding: 4.8rem 6.4rem 6.4rem;
+    }
+    .card-result h3{
+        font-size: 2.7rem;
+    }
+}
